--- a/pom.xml
+++ b/pom.xml
@@ -84,22 +84,44 @@
 		</dependency>
   
   </dependencies>
-  
-      <build>
-         <plugins>
-            <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-surefire-plugin</artifactId>
-               <version>3.0.0-M6</version>
-               <configuration>
-                  <suiteXmlFiles>
-                     <suiteXmlFile>D:\CIAutomation2019\swabLabs\src\test\resources\runners\regression.xml</suiteXmlFile>
-                  </suiteXmlFiles>
-               </configuration>
-            </plugin>     
-         </plugins>
-      </build>
-      
-      
+  <profiles>
+  	<profile>
+	  <id>sanity</id>
+	  	<build>
+	         <plugins>
+	            <plugin>
+	               <groupId>org.apache.maven.plugins</groupId>
+	               <artifactId>maven-surefire-plugin</artifactId>
+	               <version>3.0.0-M6</version>
+	               <configuration>
+	                  <suiteXmlFiles>
+	                     <suiteXmlFile>D:\CIAutomation2019\swabLabs\src\test\resources\runners\sanity.xml</suiteXmlFile>
+	                  </suiteXmlFiles>
+	               </configuration>
+	            </plugin>     
+	         </plugins>
+	      </build>
+    	</profile>
+    	
+    	<profile>
+    	<id>regression</id>
+	      	<build>
+	         <plugins>
+	            <plugin>
+	               <groupId>org.apache.maven.plugins</groupId>
+	               <artifactId>maven-surefire-plugin</artifactId>
+	               <version>3.0.0-M6</version>
+	               <configuration>
+	                  <suiteXmlFiles>
+	                     <suiteXmlFile>D:\CIAutomation2019\swabLabs\src\test\resources\runners\regression.xml</suiteXmlFile>
+	                  </suiteXmlFiles>
+	               </configuration>
+	            </plugin>     
+	         </plugins>
+	      </build>
+      	</profile>
+      	
+      	
+      </profiles>  
   
 </project>
