--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
 	      </build>
     	</profile>
     	
-    	<profile>
+    	<!-- <profile>
     	<id>regression</id>
 	      	<build>
 	         <plugins>
@@ -119,7 +119,7 @@
 	            </plugin>     
 	         </plugins>
 	      </build>
-      	</profile>
+      	</profile>-->
       	
       	
       </profiles>  
